fix: make sure that kindgom blocks aren't taking too much vertical space

--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,11 @@ button:active {
 
 .kingdom {
 	width: 100%;
-	margin-bottom: 5px;
+	margin-block: 0.5rem;
+}
+
+.kingdom p {
+	margin-block: 0.7rem;
 }
 
 .kingdom+.kingdom {
@@ -113,6 +117,7 @@ button:active {
 .kingdomName {
 	font-size: 1.5em;
 	font-weight: bold;
+	padding-inline-start: 1rem;
 }
 
 .error {
